--- a/pre_install.yml
+++ b/pre_install.yml
@@ -80,10 +80,13 @@
       get_url:
         url: https://raw.githubusercontent.com/kodekolli/eks-demo-project/main/docker-compose.yml
         dest: /home/centos
+    - name: Map count update
+      shell: |
+        echo 'vm.max_map_count=262144' >> /etc/sysctl.conf
     - name: Install SonarQube Server
       command: '{{ item }}'
       loop:        
-        - sysctl -w vm.max_map_count=262144
+        - sysctl -p
         - sysctl -w fs.file-max=65536
         - docker-compose -f /home/centos/docker-compose.yml up -d
         - sleep 5
